--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 server.port: 9090
 demo.security.jwt:
   tokenExpirationTime: 20 # Number of minutes
-  refreshTokenExpTime: 60 # Minutes
   tokenIssuer: http://localhost
   tokenSigningKey: xm8EV6Hy5RMFK4EEACIDAwQus
 
 spring.datasource:
-  url: "jdbc:mysql://localhost:3306/contactbook"
+  url: "jdbc:mysql://localhost:3306/contactsbook"
   username: "root"
   password: "root"
 spring:
